# rtx_nerf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.cu
CMake/: PTXUtilities.cmake
common/: common.cpp  common.h  volume_reader.h
loader/: data_loader.cpp  data_loader.h
rtx/include/: params.h  rtxFunctions.h
rtx/src/: optixPrograms.cu  rtxFunctions.cpp
sampler/: sampler.cpp  sampler.cu  sampler.h
vol_render/: vol_render.cu  vol_render.h
